k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-app
spec:
  type: ClusterIP
  selector:
    app: main-app
  ports:
  - port: 80
    targetPort: 80
